Integrated SonarQube, SonarLint for code